# pyapp

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  requirements.txt
scripts/: .env  .env.dev  run.dev.sh  run.sh  test.list.sh  test.run.sh
src/: main.py
src/_documents/_base/: schema.py  service.py
src/_documents/logs/: schema.py  service.py
src/_documents/notifications/: schema.py  service.py
src/_documents/settings/: schema.py  service.py
src/_documents/users/: _user_test.py  schema.py  service.py
src/_services/dropbox/: service.py
src/_services/mongo/: client.py  logger.py  service.py
src/_services/paypal/: service.py
src/_services/redis/: service.py
src/_services/s3/: _s3_manager_test.py  manager.py
src/_services/smtp/: _smtp_test.py  schema.py  service.py
src/_services/websocket/: service.py
src/api/: app.py
src/api/_shared/: dashboard.py  records.py  schema.py
src/api/_test/: router.py  service.py
src/api/account/: router.py  service.py
src/auth/: _auth_test.py  app.py  jwt.py
src/auth/google/: router.py  service.py
src/auth/oauth/: router.py  service.py
src/auth/reset_token/: router.py  schema.py  service.py
src/config/: conftest.py  crons.py  settings.py
src/setup/: service.py
src/setup/data/: api_integration.json  billing_account.json  contract.json  product.json  role_parameter.json  sales_policy.json
src/stream/: app.py
src/utils/: _utils_test.py  export.py  guard.py  helper.py  logger.py  schema.py
src/webhooks/: _webhooks_test.py  app.py
src/webhooks/example/: router.py  service.py
(+15 files in other folders)
