[tool.poetry]
name = "pyapp"
version = "0.1.0"
description = "api for pyapp"
authors = ["lambdamirror"]
readme = "README.md"
packages = [{include = "pyapp"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = {extras = ["email"], version = "^1.10.4"}
apscheduler = "^3.10.0"
itsdangerous = "^2.1.2"
requests = "^2.28.2"
httpx = "^0.23.3"
authlib = "^1.2.0"
pyjwt = "^2.6.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
fastapi-mail = "^1.2.5"
aioredis = "^2.0.1"
motor = "^3.1.1"
dnspython = "^2.3.0"
boto3 = "^1.26.69"
pandas = "^1.5.3"
numpy = "^1.24.2"
tqdm = "^4.64.1"
borb = "^2.1.8"
babel = "^2.11.0"
xlsxwriter = "^3.0.8"
openpyxl = "^3.1.0"
google-api-python-client = "^2.77.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
google-cloud-pubsub = "^2.14.1"
python-dateutil = "^2.8.2"
google = "^3.0.0"
ordered-set = "^4.1.0"
pillow = "^9.4.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


